detail and list components

--- a/ngsw-config.json
+++ b/ngsw-config.json
@@ -32,9 +32,9 @@
   ],
   "dataGroups": [
     {
-      "name": "images-api",
+      "name": "list-api",
       "urls": [
-        "https://picsum.photos/**"
+        "https://cataas.com/**"
       ],
       "cacheConfig": {
         "maxSize": 10,
