--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "^19.0.0",
     "@angular/service-worker": "^19.0.0",
     "@angular/ssr": "^19.0.6",
+    "@netlify/angular-runtime": "^2.2.1",
     "animate.css": "^4.1.1",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
